--- a/Practice_1_250707_lecture.ipynb
+++ b/Practice_1_250707_lecture.ipynb
@@ -1747,14 +1747,27 @@
       "cell_type": "code",
       "source": [
         "# TODO: 직접 계산하기\n",
+        "#원하는 영역의 넓이 / 전체 넓이\n",
         "\n",
-        "\n"
+        "print(round((0.4-0.2) * (0.7-0.5) / (1*1)), 2)\n"
       ],
       "metadata": {
-        "id": "4kYOkjvMdOkF"
+        "id": "4kYOkjvMdOkF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0109d970-3bdf-4e75-8cf7-8d3f36c24080"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
