Colab을 통해 생성됨

--- a/bert_gpt2_inference.ipynb
+++ b/bert_gpt2_inference.ipynb
@@ -121,6 +121,11 @@
         "    inputs = tokenizer(prompt, return_tensors='pt')\n",
         "    mask_idx = (inputs.input_ids == tokenizer.mask_token_id).nonzero(as_tuple=True)[1]\n",
         "\n",
+        "    # Check if mask_idx is empty\n",
+        "    if mask_idx.numel() == 0:\n",
+        "        print(\"No [MASK] token found in the input.\")\n",
+        "        return\n",
+        "\n",
         "    # inference\n",
         "    with torch.no_grad():\n",
         "        logits = model(**inputs).logits\n",
@@ -222,7 +227,7 @@
     {
       "cell_type": "code",
       "source": [
-        "text = '' # any sentence you want. enter [MASK] that you want to mask.\n",
+        "text = 'he is a boy' # any sentence you want. enter [MASK] that you want to mask.\n",
         "show_top_k(text)"
       ],
       "metadata": {
