Colab을 통해 생성됨

--- a/ddpm_tutorial.ipynb
+++ b/ddpm_tutorial.ipynb
@@ -5214,7 +5214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "w3GSVT0FU_UB",
       "metadata": {
         "id": "w3GSVT0FU_UB"
@@ -5223,8 +5223,8 @@
       "source": [
         "def add_noise(x_0, epsilon, t):\n",
         "\n",
-        "    x_t = torch.sqrt(alphas)*add_noise + torch.sqrt(1-alpha_bars) #FILL\n",
-        "\n",
+        "    #x_t = torch.sqrt(alphas)*add_noise + torch.sqrt(1-alpha_bars) #FILL\n",
+        "    x_t = sqrt_alpha_bars[t]*x_0 + sqrt_one_minus_alpha_bars[t]*epsilon #FILL\n",
         "    return x_t"
       ]
     },
