Colab을 통해 생성됨

--- a/cfg_tutorial.ipynb
+++ b/cfg_tutorial.ipynb
@@ -1062,9 +1062,9 @@
         "#   (Use double type for precision.)\n",
         "T = 1000\n",
         "alphas = torch.linspace(start=0.999, end=0.98, steps=T, dtype=torch.loat64).to(device) #FILL\n",
-        "alpha_bars =  #FILL # use torch.cumprod\n",
-        "sqrt_alpha_bars_t =  #FILL # use torch.sqrt\n",
-        "sqrt_one_minus_alpha_bars_t =  #FILL\n",
+        "alpha_bars = torch.cumprod(alphas) #FILL # use torch.cumprod\n",
+        "sqrt_alpha_bars_t = torch.sqrt(alpha_bars) #FILL # use torch.sqrt\n",
+        "sqrt_one_minus_alpha_bars_t = torch.sqrt(1 - sqrt_alpha_bars_t) #FILL\n",
         "\n",
         "# remove log file if exists\n",
         "log_file = \"train_loss.log\"\n",
