Colab을 통해 생성됨

--- a/cfg_tutorial.ipynb
+++ b/cfg_tutorial.ipynb
@@ -1098,15 +1098,20 @@
         "        # 2. Get x_t and y embedding\n",
         "        # Compute x_t = sqrt(alpha_bar_t) x_0 + sqrt(1-alpha_bar_t) epsilon\n",
         "        #    (t == 0 means diffused for 1 step)\n",
-        "        x_t = #FILL\n",
+        "        x_t = sqrt_alpha_bars_t[t,None,None,None] * x_0 + sqrt_one_minus_alpha_bars_t[t,None,None,None] * eps\n",
+        "        #FILL\n",
         "\n",
         "        # Get class embedding\n",
-        "        y_emb = #FILL\n",
+        "        y_emb = emby_ = emb(y_)\n",
+        "        #FILL\n",
         "\n",
         "        # 3. Set empty in class embedding with probability p_uncond (see above)\n",
-        "        rnd = #FILL\n",
-        "        mul = #FILL use torch.where\n",
-        "        y_emb = #FILL\n",
+        "        rnd =\n",
+        "        #FILL\n",
+        "        mul =\n",
+        "        #FILL use torch.where\n",
+        "        y_emb =\n",
+        "        #FILL\n",
         "\n",
         "        # 4. Get loss and apply gradient (update)\n",
         "        model_out = #FILL\n",
