Colab을 통해 생성됨

--- a/cfg_tutorial.ipynb
+++ b/cfg_tutorial.ipynb
@@ -1106,7 +1106,7 @@
         "        #FILL\n",
         "\n",
         "        # 3. Set empty in class embedding with probability p_uncond (see above)\n",
-        "        rnd =\n",
+        "        rnd = torch.rand(b).to(device)\n",
         "        #FILL\n",
         "        mul =\n",
         "        #FILL use torch.where\n",
@@ -1114,8 +1114,10 @@
         "        #FILL\n",
         "\n",
         "        # 4. Get loss and apply gradient (update)\n",
-        "        model_out = #FILL\n",
-        "        loss = #FILL use mse loss (recap DDPM tutorial!)\n",
+        "        model_out =\n",
+        "        #FILL\n",
+        "        loss =\n",
+        "        #FILL use mse loss (recap DDPM tutorial!)\n",
         "        loss.backward()\n",
         "        opt.step()\n",
         "        scheduler.step()\n",
