Colab을 통해 생성됨

--- a/cfg_tutorial.ipynb
+++ b/cfg_tutorial.ipynb
@@ -1108,9 +1108,9 @@
         "        # 3. Set empty in class embedding with probability p_uncond (see above)\n",
         "        rnd = torch.rand(b).to(device)\n",
         "        #FILL\n",
-        "        mul =\n",
-        "        #FILL use torch.where\n",
-        "        y_emb =\n",
+        "        mul = torch.where(rnd < p_uncond, 0, 0, 1, 0)\n",
+        "        #FILL\n",
+        "        y_emb = y_emb * mul[:,None]\n",
         "        #FILL\n",
         "\n",
         "        # 4. Get loss and apply gradient (update)\n",
