Colab을 통해 생성됨

--- a/llm_reasoning_cot.ipynb
+++ b/llm_reasoning_cot.ipynb
@@ -8,6 +8,7 @@
       "collapsed_sections": [
         "8FBaagwoomaR"
       ],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17,7 +18,8 @@
     "language_info": {
       "name": "python",
       "pygments_lexer": "ipython3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -58,7 +60,7 @@
         "# !pip install -q huggingface_hub\n",
         "\n",
         "import os, random, numpy as np\n",
-        "USE_PROVIDER = os.getenv(\"USE_PROVIDER\", \"openai\")\n",
+        "USE_PROVIDER = os.getenv(\"aa\", \"openai\")\n",
         "\n",
         "# === TODO: 키 설정  ===\n",
         "os.environ[\"OPENAI_API_KEY\"] = \"YOUR OPENAI API KEY\"\n",
