Colab을 통해 생성됨

--- a/llm_reasoning_cot.ipynb
+++ b/llm_reasoning_cot.ipynb
@@ -60,7 +60,7 @@
         "# !pip install -q huggingface_hub\n",
         "\n",
         "import os, random, numpy as np\n",
-        "USE_PROVIDER = os.getenv(\"aa\", \"openai\")\n",
+        "USE_PROVIDER = os.getenv(\"USE_PROVIDER\", \"openai\")\n",
         "\n",
         "# === TODO: 키 설정  ===\n",
         "os.environ[\"OPENAI_API_KEY\"] = \"YOUR OPENAI API KEY\"\n",
